tests/support/validation/invalid/stop_on_timepoint_different_from_nde/node.nde
STP;141     ;Alewife Station Busway                            ;alewf ;  752955.1; 2969388.4;CAMBRIDGEPARK DRIVE                               ;UNKNOWN                                           ;     ;    ;camb  ;        ;1;     ;317.4;   42.395582;  -71.141686
